--- a/datePicker/src/main/res/drawable/month_selector.xml
+++ b/datePicker/src/main/res/drawable/month_selector.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/month_selected" android:state_selected="true"/>
     <item android:drawable="@drawable/month_selected" android:state_pressed="true"/>
+    <item android:drawable="@drawable/month_default" android:state_enabled="false"/>
     <item android:drawable="@drawable/month_default" />
 </selector>
