--- a/datePicker/src/main/res/drawable/text_selector.xml
+++ b/datePicker/src/main/res/drawable/text_selector.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@android:color/white" android:state_selected="true"/>
     <item android:color="@android:color/white" android:state_pressed="true"/>
+    <item android:color="@android:color/darker_gray" android:state_enabled="false"/>
     <item android:color="@color/blue_grey" />
 </selector>
